--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,8 @@ img.backgroundimae{
 }
 /*************************id*********************/
 #pro{
-     width: 100px;
+     width: 110px;
+     height: 105px;
      border-radius: 50%;
 }
 #cont{
