--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body{
+    color: #40514e;
     margin: 0;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
@@ -13,6 +14,11 @@ h1{
 }
 h3{
     font-family: 'Montserrat', sans-serif;
+    /* color:rgb(110, 188, 142);
+    text-decoration:wavy; */
+}
+h2{
+    color:rgb(110, 188, 142);
 }
 div{
     background-color: #E4F9F5;
@@ -22,6 +28,22 @@ div{
 p{
     font-family: 'monstserrat';
 }
+hr{
+    border: dotted #232525 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
+}
+a{
+    color:#232c2c;
+    margin: 10px 20px;
+    text-decoration: none;
+}
+a:hover{
+    color: #EAF6F6;
+    font-size: 0.75rem;
+    padding: 20px 0px;
+}
 
 
 
@@ -29,30 +51,90 @@ p{
 img.top_cloud
 {
     position: absolute;
-    right: 25%;
-    top: 10%;
+    right: 300px;  
+    top: 40px;
 }
 
 img.bot_cloud
 {
     position: absolute;
-    left: 24%;
-    bottom: 46%;
+    left: 250px;
+    bottom: 300px ;
 }
 div.profile
 {
     text-align: center;
 }
-img.cre{
-    width: 100px;
+.intro{
+    width: 30%;
+    margin: auto;
 }
 img.backgroundimae{
     width: 60%;
 }
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
+    padding: 0px;
+}
+.cre{
+    width: 17%;
+    float: left;
+    margin-right: 30px;
+}
+.crea{
+    width: 12%;
+    float: right;
+    margin-left: 30px;
+}
+.contact-msg{
+    width: 40%;
+    margin: 40px auto 60px;
+    /* padding: bottom 40px; */
+
+}
+.contact-me{
+    padding-bottom: 40px;
+}
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 60;
+    -moz-border-radius: 60;
+    border-radius: 60px;
+    font-family: 'Montserrat', sans-serif;
+    color: #f5e7f5;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #19e3cb;
+    background-image: -webkit-linear-gradient(top, #19e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #19e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #19e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #19e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #19e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+  .bottom-container{
+    background-color: #66BFBF;
+    padding: 50px 0px 20px;
+  }
+  .copy{
+    color: #EAF6F6;
+  }
 /*************************id*********************/
 #pro{
-     width: 110px;
-     height: 105px;
+     width: 10%;
+     height: 50%;
      border-radius: 50%;
 }
 #cont{
